# ShapeSolver

./: CMakeLists.txt  README  main.cpp  makefile  samples.txt
Entities/: Entity.h  Factory.h  Point.cpp  Point.h  Triangle.cpp  Triangle.h  TriangleFactory.cpp  TriangleFactory.h  Vector.cpp  Vector.h
Solver/: OrangeTriangleSolver.cpp  OrangeTriangleSolver.h  ShapeSolver.h
Utils/: IO.cpp  IO.h  Math.cpp  Math.h
